# ffxiv-ps4-macro-keyboard-by-pro-micro

./: Cargo.toml  README.md  board.fzz  macros.yml
arduino/chili_crab_30m/: chili_crab_30m.ino
arduino/coffee_cookie_1h/: coffee_cookie_1h.ino
arduino/coffee_cookie_30m/: coffee_cookie_30m.ino
arduino/lv80_skybuilders_item/: lv80_skybuilders_item.ino
arduino/rarefied_syrup_35p/: rarefied_syrup_35p.ino
chili_crab_1h/: chili_crab_1h.ino
chili_crab_30m/: chili_crab_30m.ino
count_limit/: count_limit.ino
grade3_lv80_skybuilders_item/: grade3_lv80_skybuilders_item.ino
lv80_star4_matter/: lv80_star4_matter.ino
rarefied_syrup_35p/: rarefied_syrup_35p.ino
smoked_chicken/: smoked_chicken.ino
src/: count_limit_macro.ino  main.rs  models.rs  render.rs  time_limit_macro.ino  writer.rs
