[package]
name = "aws-masquerade"
description = "assume iam role"
version = "0.1.0"
authors = ["sinofseven <em.s.00001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tinytemplate = "1"
serde_yaml = "0.8"
